--- a/privacy.html
+++ b/privacy.html
@@ -71,11 +71,9 @@ jQuery(document).ready(function(){
 	jQuery("form").submit(function (e) {
     // If an opt-in option is not selected, prevent submit
     if (!jQuery('input[name="privacy"]').is(':checked')) {
-        jQuery('.privacy-eu').addClass('ak-err');
         jQuery('#privacy-error').show();
         e.preventDefault();
     } else {
-        jQuery('.privacy-eu').removeClass('ak-err');
         jQuery('#privacy-error').hide();
     }
   });
@@ -89,6 +87,14 @@ jQuery(document).ready(function(){
 	  padding-top:1.1em;}
 	#really-opt-out{
 		transition:300ms all;}
+		
+	.privacy-eu{
+		background-color: #fff0d4;
+		color: initial;
+		margin: -1px 0 0;
+		padding: 0.4rem 0.6rem;
+		position: relative;		
+	}
 	</style>
 	<div class="privacy-eu">
 	{% if privacy_text.notice %}
