--- a/privacy.html
+++ b/privacy.html
@@ -114,7 +114,7 @@ jQuery(document).ready(function(){
 				<input type="radio" id="privacy_optout" name="privacy" value="{{privacy_text.radio_optout_hash}}" onclick="setOptIn(false)">
 	      <label for="privacy_optout">{{privacy_text.radio_optout|safe}}</label>
 	    </div>
-	    <ul id="privacy-error" class="ak-err" style="display: none;"><li>Please select an option above.</li></ul>
+	    <ul id="privacy-error" style="display: none;"><li>Please select an option above.</li></ul>
 	  </div>
 	  <div id="really-opt-out" class="ak-nodisplay margin-bottom-normal padding-tiny text-small bg-dkgray-trans notch" style="display:none;">
 	    <p>{% filter ak_text:"really_optout" %}
