--- a/donate.html
+++ b/donate.html
@@ -361,7 +361,12 @@
 {% else %}
     				<input type="hidden" name="country" value="United States">
 {% endif %}
+						<div class="input-text ak-input-type-user">
+							<label class="required" for="id_email">{% filter ak_text:"field_email" %}Email{% endfilter %}</label>
+							<input id="id_email" class="" type="text" name="email">
+						</div>
           </div>
+					{% include "./privacy.html" %}
 
 {% if has_candidates %}
           <p class="ak-label-above" id="ak-occ-emp-why">
@@ -441,10 +446,6 @@
 					<div class="input-text ak-input-type-user">
 						<label for="id_name">{% filter ak_text:"field_name" %}Name{% endfilter %}</label>
 						<input id="id_name" class="ak-input-type-user" type="text" name="name">
-					</div>
-					<div class="input-text ak-input-type-user">
-						<label class="required" for="id_email">{% filter ak_text:"field_email" %}Email{% endfilter %}</label>
-						<input id="id_email" class="" type="text" name="email">
 					</div>
           <div id="ak-fieldbox-card_num" class="input-text ak-input-type-user">
 				    <label for="ak-card_num">{% filter ak_text:"field_card_num" %}Credit Card #{% endfilter %}</label>
