update validation to check for email in step 2 instead of 3

--- a/donate.html
+++ b/donate.html
@@ -917,10 +917,10 @@
                                "shipping_address1", "shipping_address2",
                                "shipping_city", "shipping_state",
                                "shipping_zip", "shipping_country",
-                               "shipping_region", "shipping_postal"
+                               "shipping_region", "shipping_postal", "email"
                                {% if has_candidates %},"action_employer", "action_occupation"{% endif %}];
         } else {
-            validate_fields = ["email", "first_name", "last_name", "name", "card_num", "card_code",
+            validate_fields = ["first_name", "last_name", "name", "card_num", "card_code",
                                "exp_date_year", "exp_date_month", "exp_date"];
         }
 
