--- a/privacy.html
+++ b/privacy.html
@@ -3,45 +3,14 @@
 {% with pt=privacy_text %}
 <div class="ak-privacy ak-errs-below">
 
-  <script>	  
-		var euCountries = [
-			'Austria',
-			'Belgium',
-			'Bulgaria',
-			'Czech Republic',
-			'Cyprus',
-			'Denmark',
-			'Estonia',
-			'Finland',
-			'France',
-			'Germany',
-			'Greece',
-			'Hungary',
-			'Iceland',
-			'Ireland',
-			'Italy',
-			'Latvia',
-			'Liechtenstein',
-			'Lithuania',
-			'Luxembourg',
-			'Malta',
-			'Netherlands',
-			'Norway',
-			'Poland',
-			'Portugal',
-			'Romania',
-			'Slovakia',
-			'Slovenia',
-			'Spain',
-			'Sweden',
-			'United Kingdom'
-		];
+  <script>
 
 jQuery(document).ready(function(){
 	var countrySelect = jQuery("#country");
- 	countrySelect.on('change',function(){
-		var selectedCountry = jQuery(this).val()
-		if ( euCountries.indexOf(selectedCountry) > -1 ){
+ 	$(actionkit.form).on('actionkit.privacyRequirementChanged', function(e){
+    console.log(e);
+		var privacyStatus = e;
+		if ( privacyStatus ){
 			//jQuery(".privacy-eu").show();
 			jQuery(".privacy-non_eu").hide();
 			//console.log('show EU privacy');
@@ -81,10 +50,6 @@ jQuery(document).ready(function(){
 	#really-opt-out{
 		transition:300ms all;}
 
-	.privacy-eu{
-		padding: 5px;
-	}
-
 	.privacy-ak-err{
 		background-color: #fff0d4;
 		color: initial;
@@ -92,75 +57,50 @@ jQuery(document).ready(function(){
 		padding: 0.4rem 0.6rem;
 		position: relative;
 	}
-
-	ul#privacy-error {
-    background-color: #fff0d4;
-    color: initial;
-    margin: -1px 0 0;
-    padding: 0.4rem 0rem;
-    position: relative;
-	}
-
-	ul#privacy-error li {
-    font-size: 0.85rem;
-    line-height: 1.4;
-    list-style-type: none;
-	}
-
-	ul#privacy-error li::before {
-    background: #ffa902;
-    border-radius: 1em;
-    content: '';
-    display: inline-block;
-    height: 0.7em;
-    margin-right: 0.4rem;
-    width: 0.7em;
-	}
-
 	</style>
 
   {% if pt.show_if %}
-      <input type="hidden" name="privacy_show_if" value="{{ pt.show_if }}">
+    <input type="hidden" name="privacy_show_if" value="{{ pt.show_if }}">
   {% endif %}
 
   {% if pt.notice %}
-      <input type="hidden" id="privacy_notice" name="privacy_hidden" value="{{pt.notice_hash}}">
-      <div id="ak-fieldbox-privacy_notice">{{pt.notice|safe}}</div>
+    <input type="hidden" id="privacy_notice" name="privacy_hidden" value="{{pt.notice_hash}}">
+    <p id="ak-fieldbox-privacy_notice" class="text-small">{{pt.notice|safe}}</p>
   {% endif %}
 
-  {% if pt.optin and pt.optout %}
-      <input type="hidden" name="required" value="privacy">
-      <input type="hidden" name="require_opt_in" value="1">
+  {% if pt.radio_optin and pt.radio_optout %}
+    <input type="hidden" name="required" value="privacy">
+    <input type="hidden" name="require_opt_in" value="1">
 
-      <input type="hidden" name="privacy_optin_lists" value="{{ list_id }}">
-      {% if pt.unsub_optouts %}
-          <input type="hidden" name="privacy_optout_unsub_all" value="1">
-      {% endif %}
-      {% if pt.optouts_skip_thanks %}
-          <input type="hidden" name="privacy_optout_skip_confirmation" value="1">
-      {% endif %}
+    <input type="hidden" name="privacy_optin_lists" value="{{ list_id }}">
+    {% if pt.unsub_optouts %}
+        <input type="hidden" name="privacy_optout_unsub_all" value="1">
+    {% endif %}
+    {% if pt.optouts_skip_thanks %}
+        <input type="hidden" name="privacy_optout_skip_confirmation" value="1">
+    {% endif %}
 
-      <div id="ak-fieldbox-privacy_radio" class="margin-bottom-normal input-radio text-lineheight-small">
-        <div>
-          <input type="radio" name="privacy" id="privacy_optin" value="{{pt.optin_hash}}">
-          <label for="privacy_optin">{{pt.optin|safe}}</label>
-        </div>
-        <div>
-          <input type="radio" name="privacy" id="privacy_optout" value="{{pt.optout_hash}}">
-          <label for="privacy_optout">{{pt.radio_optout|safe}}</label>
-        </div>
+    <div id="ak-fieldbox-privacy_radio" class="margin-bottom-normal input-radio text-lineheight-small">
+      <div>
+        <input type="radio" name="privacy" id="privacy_optin" value="{{pt.radio_optin_hash}}">
+        <label for="privacy_optin">{{pt.radio_optin|safe}}</label>
       </div>
+      <div>
+        <input type="radio" name="privacy" id="privacy_optout" value="{{pt.radio_optout_hash}}">
+        <label for="privacy_optout">{{pt.radio_optout|safe}}</label>
+      </div>
+    </div>
 
-      {% if pt.really_optout %}
-          <div id="really-opt-out" style="display: none;">{{ pt.really_optout|safe }}</div>
-          <script>
-          (function() {
-              var reallyOptOut = $('#really-opt-out');
-              $('#privacy_optin').bind('click',  function(){ reallyOptOut.hide() })
-              $('#privacy_optout').bind('click', function(){ reallyOptOut.show() })
-          })()
-          </script>
-      {% endif %}
+    {% if pt.really_optout %}
+      <div id="really-opt-out" style="display: none;">{{ pt.really_optout|safe }}</div>
+      <script>
+      (function() {
+          var reallyOptOut = $('#really-opt-out');
+          $('#privacy_optin').bind('click',  function(){ reallyOptOut.hide() })
+          $('#privacy_optout').bind('click', function(){ reallyOptOut.show() })
+      })()
+      </script>
+    {% endif %}
   {% endif %}
 
 
