--- a/privacy.html
+++ b/privacy.html
@@ -59,9 +59,7 @@ jQuery(document).ready(function(){
 	}
 	</style>
 
-  {% if pt.show_if %}
-    <input type="hidden" name="privacy_show_if" value="{{ pt.show_if }}">
-  {% endif %}
+    <input type="hidden" name="privacy_show_if" value="in_country">
 
   {% if pt.notice %}
     <input type="hidden" id="privacy_notice" name="privacy_hidden" value="{{pt.notice_hash}}">
