--- a/donate.html
+++ b/donate.html
@@ -916,7 +916,7 @@
       if (step == "1") {
         validate_fields = ["amount"];
       } else if (step == "2") {
-        validate_fields = ["email", "first_name", "last_name", "name",
+        validate_fields = ["email",
                            "address1", "address2", "city", "state", "zip",
                            "country", "region", "postal",
                            "shipping_address1", "shipping_address2",
@@ -926,7 +926,7 @@
                            "privacy"
                            {% if has_candidates %},"action_employer", "action_occupation"{% endif %}];
       } else {
-        validate_fields = ["card_num", "card_code",
+        validate_fields = ["card_num", "card_code", "first_name", "last_name", "name",
                            "exp_date_year", "exp_date_month", "exp_date"];
       }
 
