--- a/signup.html
+++ b/signup.html
@@ -12,9 +12,9 @@
 
 	var oneclick = urlParam('oneclick');
 
-	$( document ).ready(function() {
+	jQuery( document ).ready(function() {
 		if (oneclick){
-			$('#action-lead div').css('visibility', 'hidden');
+			jQuery('#action-lead div').css('visibility', 'hidden');
 		}
 	});
 </script>
