--- a/user_form.html
+++ b/user_form.html
@@ -83,8 +83,8 @@
 </div>
 {% endif %}
 <script type="text/javascript">
-$(document).ready(function(){
-$("#partner-share").addClass("appended").insertBefore("#form input.submit");
+jQuery(document).ready(function(){
+jQuery("#partner-share").addClass("appended").insertBefore("#form input.submit");
 });
 </script>
 {% if page.custom_fields.form_opt_in %}
