--- a/privacy.html
+++ b/privacy.html
@@ -5,15 +5,14 @@
 
   <script>
 
-jQuery(document).ready(function(){
+jQuery(document).ready(function($){
 	var countrySelect = jQuery("#country");
- 	$(actionkit.form).on('actionkit.privacyRequirementChanged', function(obj, privacyStatus){
+ 	jQuery(actionkit.form).on('actionkit.privacyRequirementChanged', function(obj, privacyStatus){
+    console.log('privacy requirement is now: ' + privacyStatus);
 		if ( privacyStatus ){
 			jQuery(".privacy-non_eu").hide();
-			//console.log('show EU privacy');
 		} else {
 			jQuery(".privacy-non_eu").show();
-			//console.log('show non-EU privacy');
 		}
 	});
 
