--- a/privacy.html
+++ b/privacy.html
@@ -69,11 +69,11 @@ jQuery(document).ready(function($){
       <p><label for="privacy_optin" class="button button-small button-secondary bg-teal">{% filter ak_text:"really_optout_button" %}Yes, keep me involved{% endfilter %}</label></p>
     </div>
     <script>
-    (function() {
-        var reallyOptOut = $('#really-opt-out');
-        $('#privacy_optin').bind('click',  function(){ reallyOptOut.fadeOut('slow') })
-        $('#privacy_optout').bind('click', function(){ reallyOptOut.fadeIn('slow') })
-    })()
+    jQuery(document).ready(function($){
+      var reallyOptOut = $('#really-opt-out');
+      jQuery('#privacy_optin').bind('click',  function(){ reallyOptOut.fadeOut('slow') })
+      jQuery('#privacy_optout').bind('click', function(){ reallyOptOut.fadeIn('slow') })
+    });
     </script>
 
   {% endif %}
