--- a/privacy.html
+++ b/privacy.html
@@ -37,7 +37,7 @@ jQuery(document).ready(function($){
 	</style>
 
     <input type="hidden" name="privacy_show_if" value="in_country">
-    <input type="hidden" name="privacy_optout_unsub_all" value="1">
+    <input type="hidden" name="privacy_optout_unsub_all" value="">
 
   {% if pt.notice %}
     <input type="hidden" id="privacy_notice" name="privacy_hidden" value="{{pt.notice_hash}}">
@@ -72,7 +72,10 @@ jQuery(document).ready(function($){
     jQuery(document).ready(function($){
       var reallyOptOut = $('#really-opt-out');
       jQuery('#privacy_optin').bind('click',  function(){ reallyOptOut.fadeOut('slow') })
-      jQuery('#privacy_optout').bind('click', function(){ reallyOptOut.fadeIn('slow') })
+      jQuery('#privacy_optout').bind('click', function(){ 
+	      reallyOptOut.fadeIn('slow')
+	      jQuery('#optout_all').value('1');
+ 			})
     });
     </script>
 
