--- a/privacy.html
+++ b/privacy.html
@@ -73,7 +73,7 @@ jQuery(document).ready(function($){
       var reallyOptOut = $('#really-opt-out');
       jQuery('#privacy_optin').bind('click',  function(){ reallyOptOut.fadeOut('slow') })
       jQuery('#privacy_optout').bind('click', function(){ 
-	      reallyOptOut.fadeIn('slow')
+	      reallyOptOut.fadeIn('slow');
 	      jQuery('#optout_all').value('1');
  			})
     });
