--- a/privacy.html
+++ b/privacy.html
@@ -8,7 +8,7 @@
 jQuery(document).ready(function($){
 	var countrySelect = jQuery("#country");
  	jQuery(actionkit.form).on('actionkit.privacyRequirementChanged', function(obj, privacyStatus){
-    console.log('privacy requirement is now: ' + privacyStatus);
+//    console.log('privacy requirement is now: ' + privacyStatus);
 		if ( privacyStatus ){
 			jQuery(".privacy-non_eu").hide();
 		} else {
@@ -72,10 +72,8 @@ jQuery(document).ready(function($){
     jQuery(document).ready(function($){
       var reallyOptOut = $('#really-opt-out');
       jQuery('#privacy_optin').bind('click',  function(){ reallyOptOut.fadeOut('slow') })
-      jQuery('#privacy_optout').bind('click', function(){ 
-	      reallyOptOut.fadeIn('slow');
-	      jQuery('#optout_all').value('1');
- 			})
+      jQuery('#privacy_optout').bind('click', function(){	reallyOptOut.fadeIn('slow') } jQuery('#optout_all').value('1') )
+
     });
     </script>
 
