--- a/privacy.html
+++ b/privacy.html
@@ -72,8 +72,8 @@ jQuery(document).ready(function($){
     jQuery(document).ready(function($){
       var reallyOptOut = $('#really-opt-out');
       jQuery('#privacy_optin').bind('click',  function(){ reallyOptOut.fadeOut('slow') })
-      jQuery('#privacy_optout').bind('click', function(){	reallyOptOut.fadeIn('slow') } jQuery('#optout_all').value('1') )
-
+      jQuery('#privacy_optout').bind('click', function(){	reallyOptOut.fadeIn('slow') })
+// jQuery('#optout_all').value('1')
     });
     </script>
 
