adding margin-bottom to submit button

--- a/user_form_wrapper.html
+++ b/user_form_wrapper.html
@@ -34,7 +34,7 @@
   {% if page.type != "Donation" %}
     {% if page.type != "Event" %}
       {% if page.type != "LTE" %}
-<div class="input-wrapper input-submit">
+<div class="input-wrapper input-submit margin-bottom-normal">
   <button type="submit" class="submit button-primary">
   {% if page.custom_fields.form_submit_button_text %}
     {{ page.custom_fields.form_submit_button_text }}
