--- a/privacy.html
+++ b/privacy.html
@@ -74,8 +74,8 @@ jQuery(document).ready(function($){
       jQuery('#privacy_optin').bind('click',  function(){ reallyOptOut.fadeOut('slow') })
       jQuery('#privacy_optout').bind('click', function(){	reallyOptOut.fadeIn('slow') })
 
-      jQuery('#privacy_optin').bind('click',  function(){ jQuery('#optout_all').value('') })
-      jQuery('#privacy_optout').bind('click', function(){	jQuery('#optout_all').value('1') })
+      jQuery('#privacy_optin').bind('click',  jQuery('#optout_all').value('') )
+      jQuery('#privacy_optout').bind('click', jQuery('#optout_all').value('1') )
 
 
 // jQuery('#optout_all').value('1')
