uncommenting privacy_optout_unsub_all for now

--- a/privacy.html
+++ b/privacy.html
@@ -37,7 +37,7 @@ jQuery(document).ready(function($){
 	</style>
 
     <input type="hidden" name="privacy_show_if" value="in_country">
-    <input type="hidden" name="privacy_optout_unsub_all" value="" id="optout_all">
+<!--    <input type="hidden" name="privacy_optout_unsub_all" value="" id="optout_all">-->
 
   {% if pt.notice %}
     <input type="hidden" id="privacy_notice" name="privacy_hidden" value="{{pt.notice_hash}}">
