--- a/privacy.html
+++ b/privacy.html
@@ -37,7 +37,7 @@ jQuery(document).ready(function($){
 	</style>
 
     <input type="hidden" name="privacy_show_if" value="in_country">
-<!--    <input type="hidden" name="privacy_optout_unsub_all" value="" id="optout_all">-->
+    <input type="hidden" name="unsub_all" value="" id="unsub_all">
 
   {% if pt.notice %}
     <input type="hidden" id="privacy_notice" name="privacy_hidden" value="{{pt.notice_hash}}">
@@ -71,21 +71,22 @@ jQuery(document).ready(function($){
     <script>
     jQuery(document).ready(function($){
       var reallyOptOut = jQuery('#really-opt-out');
-      jQuery('#privacy_optin').bind('click',  function(){ reallyOptOut.fadeOut('slow') })
-      jQuery('#privacy_optout').bind('click', function(){	reallyOptOut.fadeIn('slow') })
-/*
-      jQuery('#privacy_optin').bind('click',  jQuery('#optout_all').value('') )
-      jQuery('#privacy_optout').bind('click', jQuery('#optout_all').value('1') )
-*/
-
+      jQuery('#privacy_optin').click(function(){ 
+	      reallyOptOut.fadeOut('slow');
+	      jQuery('#unsub_all').value('');
+	    })
+      jQuery('#privacy_optout').click(function(){	
+	      reallyOptOut.fadeIn('slow');
+	      jQuery('#unsub_all').value('1');
+	    })
 // jQuery('#optout_all').value('1')
 /*
 			jQuery('input:radio[name=privacy]:checked').change(function () {
             if (jQuery("input[name='privacy']:checked").attr('id') == 'privacy_optin') {
-                jQuery('#optout_all').value('');
+                jQuery('#unsub_all').value('');
             }
             if (jQuery("input[name='privacy']:checked").attr('id') == 'privacy_optout') {
-                jQuery('#optout_all').value('1');
+                jQuery('#unsub_all').value('1');
             }
         });
 */        
