--- a/privacy.html
+++ b/privacy.html
@@ -73,11 +73,11 @@ jQuery(document).ready(function($){
       var reallyOptOut = jQuery('#really-opt-out');
       jQuery('#privacy_optin').click(function(){ 
 	      reallyOptOut.fadeOut('slow');
-	      jQuery('#unsub_all').value('');
+	      jQuery('#unsub_all').val('');
 	    })
       jQuery('#privacy_optout').click(function(){	
 	      reallyOptOut.fadeIn('slow');
-	      jQuery('#unsub_all').value('1');
+	      jQuery('#unsub_all').val('1');
 	    })
 // jQuery('#optout_all').value('1')
 /*
