--- a/privacy.html
+++ b/privacy.html
@@ -37,7 +37,6 @@ jQuery(document).ready(function($){
 	</style>
 
     <input type="hidden" name="privacy_show_if" value="in_country">
-<!--    <input type="hidden" name="unsub_all" value="" id="unsub_all"> -->
 
   {% if pt.notice %}
     <input type="hidden" id="privacy_notice" name="privacy_hidden" value="{{pt.notice_hash}}">
@@ -47,7 +46,8 @@ jQuery(document).ready(function($){
   {% if pt.radio_optin and pt.radio_optout %}
     <input type="hidden" name="required" value="privacy">
     <input type="hidden" name="require_opt_in" value="1">
-    <input type="hidden" name="privacy_optin_lists" value="{{ list_id }}">
+    <input id="sub" type="hidden" name="privacy_radio_optin_lists" value="{{ list_id }}">
+		<input id="unsub_all" type="hidden" name="privacy_radio_optout_unsub_all" value="1">    
 
     {% if pt.optouts_skip_thanks %}
       <input type="hidden" name="privacy_optout_skip_confirmation" value="1">
@@ -74,10 +74,12 @@ jQuery(document).ready(function($){
       jQuery('#privacy_optin').click(function(){ 
 	      reallyOptOut.fadeOut('slow');
 	      jQuery('#unsub_all').val('');
+	      jQuery('#sub').val('{{ list_id }}');
 	    })
       jQuery('#privacy_optout').click(function(){	
 	      reallyOptOut.fadeIn('slow');
 	      jQuery('#unsub_all').val('1');
+	      jQuery('#sub').val('');
 	    })
 // jQuery('#optout_all').value('1')
 /*
