--- a/survey.html
+++ b/survey.html
@@ -52,6 +52,7 @@
 			{% include "./user_form_wrapper.html" %}
 			</div>
 {% endautoescape %}
+			<ul style="display:none;" id="ak-errors"><li></li></ul>
 		</form>
 {% endif %}
 	</div>
