--- a/survey.html
+++ b/survey.html
@@ -39,11 +39,11 @@
 {% autoescape off %}
 			<input type="hidden" name="lists" value="{{ page.list.id }}" />
 			<input type="hidden" name="page" value="{{ page.name }}" />
-			<div id="survey-custom-questions" class="form-style-expanded margin-bottom-huge">
+			<div id="survey-custom-questions" class="form-style-expanded margin-bottom-huge {{templateset.custom_fields.field_errors_class|default:"ak-errs-below"}}">
 	{% for question in form.surveyquestion_set.all %}
 				<div class="survey-question margin-bottom-large input input-{{ question.field_type }}">
-					<label class="strong text-strong text-blue margin-bottom-normal">{{ question.question_label }}</label>
-				{{ question.question_html }}
+					<label class="strong text-strong text-blue margin-bottom-normal">{{ question.question_label|safe }}</label>
+				{{ question.input_html|safe }}
 				</div>
 	{% endfor %}
 			</div>
