--- a/wrapper.html
+++ b/wrapper.html
@@ -124,6 +124,16 @@ actionkit.forms.initForm('act');
 {% endif %}
 <div class="clear" /></div>
 
+{% comment %}
+-------------
+We're getting wild with Custom Templateset Fields and string translation in here --
+So that we can keep things DRY while still having translatability and the
+flexibility we need, we're using {% include_tmpl ... %} to pull in CTFs so that
+we can include {% filter ak_text:"..." %} strings inside the CTFs that will then
+be translated.
+-------------
+{% endcomment %}
+
 <footer id="site-footer" class="section padding-small bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% elif templateset.custom_fields.site_bg_color_slug %}{{ templateset.custom_fields.site_bg_color_slug }}{% else %}white{% endif %} width-full text-small">
 	<div class="section-inner">
 
@@ -140,7 +150,7 @@ actionkit.forms.initForm('act');
 			{% include_tmpl templateset.custom_fields.site_footer_menu %}
 		</div>
 	{% else %}
-			 &nbsp;&nbsp; <a href="{% filter ak_text:"footer_about" %}https://350.org/how{% endfilter %}">{% filter ak_text:"footer_about" %}About{% endfilter %}</a> /{% ifequal page.type "Donation" %} {% else %} <a
+			 &nbsp;&nbsp; <a href="{% filter ak_text:"footer_about_url" %}https://350.org/how{% endfilter %}">{% filter ak_text:"footer_about" %}About{% endfilter %}</a> /{% ifequal page.type "Donation" %} {% else %} <a
 	href="{% filter ak_text:"footer_donate_url" %}https://350.org/donate{% endfilter %}">{% filter ak_text:"footer_donate" %}Donate{% endfilter %}</a> / {% endifequal%}<a id="privacy-link" href="{% filter ak_text:"footer_privacy_url" %}https://350.org/en/privacy{% endfilter %}">{% filter ak_text:"footer_privacy" %}Privacy{% endfilter %}</a> / <a href="{% filter ak_text:"footer_contact_url" %}https://350.org/en/contact/{% endfilter %}">{% filter ak_text:"footer_contact" %}Contact{% endfilter %}</a>
 	{% endif %}
 {% endautoescape %}
