--- a/donate.html
+++ b/donate.html
@@ -560,7 +560,7 @@
 				<p><strong class="text-small-caps">Donate by Cheque</strong>: Make your cheque payable to <em>350.org</em> and mail it to <em>350.org  Limited, Suite 8 / 50 Reservoir Street, Surry Hills, NSW 2010, Australia.</em>.</p>
 				<p><strong class="text-small-caps">Contact Us:</strong> Questions? Problems? Please contact us at <a href="mailto:donations@350.org.au?subject=Question%20about%20donation%20to%20350.org%20Australia">donations@350.org.au</a>.</p>
 				<p><strong class="text-small-caps">Update Your Account: </strong>To update your account with a new credit card, new expiration date, or new amount please visit <a href="https://350.org/update">350.org/update</a></p>
-				<p>350.org Limited is a registered Australian charity but donations are NOT tax-deductible in Australia. ABN: 46 138 155 192. Some donations for joint work with our partner organisation Friends of the Earth can be made tax deductible. For information about that, please contact <a href="mailto:donations@350.org.au">donations@350.org.au</a>.</p>
+				<p>350.org Limited is a registered Australian charity but donations are NOT tax-deductible in Australia. ABN: 46 138 155 192. Some donations for joint work with our partner organisation Climate Action Network Australia (CANA) can be made tax deductible. For information about that, please contact <a href="mailto:donations@350.org.au">donations@350.org.au</a>.</p>
 				{% else %}
 					{% filter ak_text:"donate_footer_text_block" %}
 <p><strong class="text-small-caps">Donate by Check:</strong> Make your check payable to <em>350.org</em> and mail it to <em>350.org, 20 Jay St, Suite 732, Brooklyn, NY 11201, USA</em>.</p>
