found a few http:// links, fixed that

--- a/password.html
+++ b/password.html
@@ -17,12 +17,12 @@
 			    <h2>Set up your password</h2>
 					<p>Enter your email and we'll send you a link to set up a password so you can log in.</p>
 				
-					<p>If your email address is not recognized as valid, make sure you are using the email address associated with your events or donations at 350.org. You can also <a href="http://350.org/signup">click&nbsp;here&nbsp;to sign up</a> and create a new account.</p>			
+					<p>If your email address is not recognized as valid, make sure you are using the email address associated with your events or donations at 350.org. You can also <a href="https://350.org/signup">click&nbsp;here&nbsp;to sign up</a> and create a new account.</p>			
 				{% else %}
 			    <h2>Reset your password</h2>
 						<p>Fill out the form and we'll send you a link to reset your password.</p>
 			
-						<p>If your email address is not recognized as valid, make sure you are using the email address you used to sign up at 350.org. You can also <a href="http://350.org/signup">click&nbsp;here&nbsp;to sign up</a> and create a new account.</p>
+						<p>If your email address is not recognized as valid, make sure you are using the email address you used to sign up at 350.org. You can also <a href="https://350.org/signup">click&nbsp;here&nbsp;to sign up</a> and create a new account.</p>
 		
 		    {% endif %}
 		</div>	
